# AlgorithmSDK

./: Build_VS2013_Win32_Debug.bat  Build_VS2013_Win32_Release.bat  Build_VS2013_x64_Debug.bat  Build_VS2013_x64_Release.bat  Build_VS2015_Win32_Debug.bat  Build_VS2015_Win32_Release.bat  Build_VS2015_x64_Debug.bat  Build_VS2015_x64_Release.bat  CMakeLists.txt  Readme.md  conanfile.py  copyright.txt
src/: AbstractInputProcessor.cpp  AbstractInputProcessor.h  CMakeLists.txt  DualQuat.h  IMURotationModel.cpp  IMURotationModel.h  InternalVariables.cpp  InternalVariables.h  LHTrackingAlgorithm.cpp  LHTrackingAlgorithm.h  LightHouseData.h  LighthouseInputProcessor.cpp  LighthouseInputProcessor.h  MoveDetector.cpp  MoveDetector.h  PresampleDataLoader.cpp  PresampleDataLoader.h  RingBufferDataLoader.cpp  RingBufferDataLoader.h  SafeFlag.hpp  SensorDataInterpretor.cpp  SensorDataInterpretor.h  TO_HMD.cpp  TO_HMD.h  TimeManager.cpp  TimeManager.h  TrackObject.cpp  TrackObject.h  TrackObjectManager.cpp  TrackObjectManager.h  TrackingDataLoader.cpp  TrackingDataLoader.h  internal.h  ringbuffer.h  stdafx.cpp  types.h  version.aps  version.rc
